Proof of concept placement of hull.io login buttons

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
         <link rel="shortcut icon" href="/images/icon.png">
     <% } %>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet' />
+    <link href='http://hullstrap.s3.amazonaws.com/stylesheets/hullstrap.css' rel='stylesheet' />
 
     <% if (config.environment && config.environment === 'prod') { %>
         <!--[if lte IE 8]> <script src="<%= config.getHashedFile('./.temp/scripts/ie.min.js', {trim: './.temp'}) %>"></script> <![endif]-->
